[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/fonts/MartianMono-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menues/overlay.gd" type="Script" id=2]
[ext_resource path="res://Art/fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[node name="overlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = 80.0

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1820.0
margin_bottom = 440.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
margin_right = 1820.0
margin_bottom = 304.0
rect_min_size = Vector2( 1820, 300 )

[node name="label_pausiert" type="RichTextLabel" parent="MarginContainer/MainContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Pausiert"
tab_size = 24
text = "Pausiert"

[node name="label_win" type="RichTextLabel" parent="MarginContainer/MainContainer/VBoxContainer"]
visible = false
margin_top = 154.0
margin_right = 1820.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Gewonnen!"
tab_size = 24
text = "Gewonnen!"

[node name="label_lost" type="RichTextLabel" parent="MarginContainer/MainContainer/VBoxContainer"]
visible = false
margin_top = 308.0
margin_right = 1820.0
margin_bottom = 458.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Leider verloren :("
tab_size = 24
text = "Leider verloren :("

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/MainContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 1820.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/normal_font = SubResource( 2 )
tab_size = 24

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer/MainContainer"]
margin_top = 308.0
margin_right = 1820.0
margin_bottom = 440.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/VBoxContainer2"]
margin_right = 250.0
margin_bottom = 132.0
custom_constants/separation = 20
alignment = 1

[node name="Button_resume" type="Button" parent="MarginContainer/MainContainer/VBoxContainer2/VBoxContainer"]
visible = false
margin_right = 250.0
margin_bottom = 56.0
rect_min_size = Vector2( 250, 50 )
custom_fonts/font = SubResource( 3 )
text = "Resume"
align = 0

[node name="Button2" type="Button" parent="MarginContainer/MainContainer/VBoxContainer2/VBoxContainer"]
margin_right = 250.0
margin_bottom = 56.0
rect_min_size = Vector2( 250, 50 )
custom_fonts/font = SubResource( 3 )
text = "Retry"
align = 0

[node name="Button3" type="Button" parent="MarginContainer/MainContainer/VBoxContainer2/VBoxContainer"]
margin_top = 76.0
margin_right = 250.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 4 )
text = "Verlassen"
align = 0

[connection signal="button_down" from="MarginContainer/MainContainer/VBoxContainer2/VBoxContainer/Button_resume" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="MarginContainer/MainContainer/VBoxContainer2/VBoxContainer/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="MarginContainer/MainContainer/VBoxContainer2/VBoxContainer/Button3" to="." method="_on_Button3_button_down"]
